--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-NEXTAUTH_SECRET=  '123456789edfghjk'
-MONGODB_URI=  'mongodb+srv://yhimanshu23:xJdrTqVTLhUimtKZ@cluster0.vjju3sv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
-RESEND_API_KEY=  're_4KPrFHFx_KH9dRvw7xMcifmRazsNKVPre'
-OPENAI_API_KEY=  'AIzaSyCoJgND8xluFVoHTc56kBeRAiRomGs1Lho'
+NEXTAUTH_SECRET=  
+MONGODB_URI=  
+RESEND_API_KEY=  
+OPENAI_API_KEY=  
 
-//password - 12345678
+
